--- a/proyecto_web/index.html
+++ b/proyecto_web/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,7 +8,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Iconos Boxicons -->
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
-  
   <!-- Estilos CSS -->
   <link href="css/style.css" rel="stylesheet" />
 </head>
@@ -22,7 +20,7 @@
         <div class="row align-items-center text-center text-md-start">
           <!-- Logo -->
           <div class="col-12 col-md-4 mb-2 mb-md-0 d-flex justify-content-center justify-content-md-start">
-            <a href="./index.htm">
+            <a href="./index.html">
               <img src="./logo/logo.png" alt="Logo Turismo Salvadoreño" class="img-fluid" style="max-height: 60px;">
             </a>
           </div>
@@ -31,7 +29,7 @@
           <div class="col-12 col-md-4 d-flex align-items-center justify-content-center">
             <i class="bx bx-globe fs-2 text-primary me-2"></i>
             <h1 class="m-0 fs-4 fw-bold">
-              <a href="./index.htm" class="text-decoration-none">Turismo SV</a>
+              <a href="./index.html" class="text-decoration-none">Turismo SV</a>
             </h1>
           </div>
           <div class="col-12 col-md-4 d-none d-md-block">
@@ -52,7 +50,7 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
           <li class="nav-item text-center text-lg-start">
-            <a class="nav-link index px-3" href="./index.htm">Inicio</a>
+            <a class="nav-link index px-3" href="./index.html">Inicio</a>
           </li>
           <li class="nav-item dropdown">
             <select class="select-menu nav-link" onchange="location = this.value;">
@@ -98,10 +96,9 @@
                 <hr class="dropdown-divider">
               </li>
               <li><a class="dropdown-item" href="./plantillas/usuario.html">Mi cuenta</a></li>
-              <li><a class="dropdown-item" href="./index.htm" onclick="cerrarSesion()">Cerrar sesión</a></li>
+              <li><a class="dropdown-item" href="./index.html" onclick="cerrarSesion()">Cerrar sesión</a></li>
             </ul>
           </li>
-
         </ul>
       </div>
     </div>
@@ -218,7 +215,7 @@ document.addEventListener("DOMContentLoaded", function () {
         <div class="position-relative">
           <img src="./images/centroHistorico.jpeg" class="card-img-top w-100" alt="Centro Historico">
           <div class="position-absolute bottom-0 end-0 m-2">
-          <button class="btn btn-sm btn-light rounded-circle me-1 toggle-card-btn"><i class="bx bx-show"></i></button>
+          <!-- <button class="btn btn-sm btn-light rounded-circle me-1 toggle-card-btn"><i class="bx bx-show"></i></button> -->
           <button class="btn btn-sm btn-light rounded-circle like-btn"><i class="bx bx-heart"></i></button>
           </div>
         </div>
@@ -237,7 +234,7 @@ document.addEventListener("DOMContentLoaded", function () {
         <div class="position-relative">
           <img src="./images/suchitoto.jpg" class="card-img-top w-100" alt="Suchitoto">
           <div class="position-absolute bottom-0 end-0 m-2">
-           <button class="btn btn-sm btn-light rounded-circle me-1 toggle-card-btn"><i class="bx bx-show"></i></button>
+           <!-- <button class="btn btn-sm btn-light rounded-circle me-1 toggle-card-btn"><i class="bx bx-show"></i></button> -->
              <button class="btn btn-sm btn-light rounded-circle like-btn"><i class="bx bx-heart"></i></button>
           </div>
         </div>
@@ -256,7 +253,7 @@ document.addEventListener("DOMContentLoaded", function () {
         <div class="position-relative">
           <img src="./images/lagoCoatepeque.jpg" class="card-img-top w-100" alt="Lago Coatepeque">
           <div class="position-absolute bottom-0 end-0 m-2">
-            <button class="btn btn-sm btn-light rounded-circle me-1 toggle-card-btn"><i class="bx bx-show"></i></button>
+            <!-- <button class="btn btn-sm btn-light rounded-circle me-1 toggle-card-btn"><i class="bx bx-show"></i></button> -->
              <button class="btn btn-sm btn-light rounded-circle like-btn"><i class="bx bx-heart"></i></button>
           </div>
         </div>
@@ -277,7 +274,7 @@ document.addEventListener("DOMContentLoaded", function () {
         <div class="position-relative">
           <img src="./images/playaTunco.jpg" class="card-img-top w-100" alt="Playa el Tunco">
           <div class="position-absolute bottom-0 end-0 m-2">
-            <button class="btn btn-sm btn-light rounded-circle me-1 toggle-card-btn"><i class="bx bx-show"></i></button>
+            <!-- <button class="btn btn-sm btn-light rounded-circle me-1 toggle-card-btn"><i class="bx bx-show"></i></button> -->
              <button class="btn btn-sm btn-light rounded-circle like-btn"><i class="bx bx-heart"></i></button>
           </div>
         </div>
@@ -296,7 +293,7 @@ document.addEventListener("DOMContentLoaded", function () {
         <div class="position-relative">
           <img src="./images/cerroVerde.jpeg" class="card-img-top w-100" alt="Cerro Verde">
           <div class="position-absolute bottom-0 end-0 m-2">
-            <button class="btn btn-sm btn-light rounded-circle me-1 toggle-card-btn"><i class="bx bx-show"></i></button>
+            <!-- <button class="btn btn-sm btn-light rounded-circle me-1 toggle-card-btn"><i class="bx bx-show"></i></button> -->
            <button class="btn btn-sm btn-light rounded-circle like-btn"><i class="bx bx-heart"></i></button>
           </div>
         </div>
@@ -386,7 +383,7 @@ document.addEventListener("DOMContentLoaded", function () {
                 Explora las playas más impresionantes de El Salvador en una
                 experiencia inolvidable de surf y relax.
               </p>
-              <a href="#" class="btn btn-primary rounded-pill px-3">Leer más</a>
+              <a href="https://www.youtube.com/watch?v=ZXjx3OAiKNo" target="_blank" class="btn btn-primary rounded-pill px-3">Leer más</a>
             </div>
           </div>
         </div>
@@ -401,7 +398,7 @@ document.addEventListener("DOMContentLoaded", function () {
                 Descubre la magia colonial, el arte y la historia que hacen de
                 Suchitoto un destino imperdible.
               </p>
-              <a href="#" class="btn btn-primary rounded-pill px-3">Leer más</a>
+              <a href="https://youtu.be/zBNLk4UNhKk" target="_blank" class="btn btn-primary rounded-pill px-3">Leer más</a>
             </div>
           </div>
         </div>
@@ -469,5 +466,4 @@ document.addEventListener("DOMContentLoaded", function () {
   <script src="./js/navbarUsuario.js"></script>
 
 </body>
-
 </html>
