--- a/proyecto_web/plantillas/montanas.html
+++ b/proyecto_web/plantillas/montanas.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,95 +12,94 @@
 
 <body>
   <!-- Header -->
-<header>
-  <div class="container-fluid bg-light py-2 border-bottom">
-    <div class="container">
-      <div class="row align-items-center text-center text-md-start">
-        <!-- Logo -->
-        <div class="col-12 col-md-4 mb-2 mb-md-0 d-flex justify-content-center justify-content-md-start">
-          <a href="./index.htm">
-            <img src="/logo/logo.png" alt="Logo Turismo Salvadoreño" class="img-fluid" style="max-height: 60px;">
-          </a>
-        </div>
-
-        <!-- Título -->
-        <div class="col-12 col-md-4 d-flex align-items-center justify-content-center">
-          <i class="bx bx-globe fs-2 text-primary me-2"></i>
-          <h1 class="m-0 fs-4 fw-bold">
-           <a href="./index.htm" class="text-decoration-none">Turismo SV</a>
-          </h1>
-        </div>
-        <div class="col-12 col-md-4 d-none d-md-block">
+  <header>
+    <div class="container-fluid bg-light py-2 border-bottom">
+      <div class="container">
+        <div class="row align-items-center text-center text-md-start">
+          <!-- Logo -->
+          <div class="col-12 col-md-4 mb-2 mb-md-0 d-flex justify-content-center justify-content-md-start">
+            <a href="../index.html">
+              <img src="../logo/logo.png" alt="Logo Turismo Salvadoreño" class="img-fluid" style="max-height: 60px;">
+            </a>
+          </div>
+  
+          <!-- Título -->
+          <div class="col-12 col-md-4 d-flex align-items-center justify-content-center">
+            <i class="bx bx-globe fs-2 text-primary me-2"></i>
+            <h1 class="m-0 fs-4 fw-bold">
+              <a href="../index.html" class="text-decoration-none">Turismo SV</a>
+            </h1>
+          </div>
+          <div class="col-12 col-md-4 d-none d-md-block">
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</header>
-  
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-custom shadow-sm">
-      <div class="container">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-  
-        <div class="collapse navbar-collapse menu" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item text-center text-lg-start">
-              <a class="nav-link px-3" href="../index.htm">Inicio</a>
-            </li>
-            <li class="nav-item dropdown">
-              <select class="select-menu index nav-link" onchange="location = this.value;">
-               <option value="" class="turismo">TURISMO</option>
-                <option value="../plantillas/urbano.html"></a>Urbano</option>
-                <option value="../plantillas/rural.html">Rural</option>
-                <option value="../plantillas/playas.html">Playas</option>
-                <option value="../plantillas/lagos.html">Lagos</option>
-                <option value="../plantillas/montanas.html">Montañas</option>
-              </select>
-            </li>
-            <li class="nav-item text-center text-lg-start">
-              <a class="nav-link px-3" href="../plantillas/resenas.html">Reseñas</a>
-            </li>
-            <li class="nav-item text-center text-lg-start">
-              <a class="nav-link px-3" href="../plantillas/reservas.html">Reservas</a>
-            </li>
-            <li class="nav-item text-center text-lg-start">
-              <a class="nav-link px-3" href="../plantillas/contacto.html">Contacto</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link px-3 buttonfix-link" href="../plantillas/quienesSomos.html">¿Quiénes Somos?</a>
-            </li>
-            <li class="nav-item text-center text-lg-start">
-              <a class="nav-link px-3" href="../plantillas/promociones.html">Promociones</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link px-3 buttonfix-link" href="../plantillas/login.html">Iniciar Sesion</a>
-            </li>
-  
-            <li class="nav-item dropdown">
-              <a href="#" id="userDropdownBtn" class="nav-link d-flex align-items-center" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                <img id="navbarProfilePic" src="../pictureDefault/perfilLogoDefecto.jpg" alt="Perfil"
-                  class="rounded-circle">
-              </a>
-              <ul class="dropdown-menu dropdown-menu-end shadow" aria-labelledby="userDropdownBtn">
-                <li>
-                  <h6 class="dropdown-header" id="userEmail">usuario@example.com</h6>
-                </li>
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="../plantillas/usuario.html">Mi cuenta</a></li>
-                <li><a class="dropdown-item" href="../index.htm" onclick="cerrarSesion()">Cerrar sesión</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
   </header>
-
+  
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-custom shadow-sm">
+    <div class="container">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+  
+      <div class="collapse navbar-collapse menu" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item text-center text-lg-start">
+            <a class="nav-link px-3" href="../index.html">Inicio</a>
+          </li>
+          <li class="nav-item dropdown">
+            <select class="select-menu index nav-link" onchange="location = this.value;">
+              <option value="" class="turismo">TURISMO</option>
+              <option value="../plantillas/urbano.html"></a>Urbano</option>
+              <option value="../plantillas/rural.html">Rural</option>
+              <option value="../plantillas/playas.html">Playas</option>
+              <option value="../plantillas/lagos.html">Lagos</option>
+              <option value="../plantillas/montanas.html">Montañas</option>
+            </select>
+          </li>
+          <li class="nav-item text-center text-lg-start">
+            <a class="nav-link px-3" href="../plantillas/resenas.html">Reseñas</a>
+          </li>
+          <li class="nav-item text-center text-lg-start">
+            <a class="nav-link px-3" href="../plantillas/reservas.html">Reservas</a>
+          </li>
+          <li class="nav-item text-center text-lg-start">
+            <a class="nav-link px-3" href="../plantillas/contacto.html">Contacto</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link px-3 buttonfix-link" href="../plantillas/quienesSomos.html">¿Quiénes Somos?</a>
+          </li>
+          <li class="nav-item text-center text-lg-start">
+            <a class="nav-link px-3" href="../plantillas/promociones.html">Promociones</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link px-3 buttonfix-link" href="../plantillas/login.html">Iniciar Sesion</a>
+          </li>
+  
+          <li class="nav-item dropdown">
+            <a href="#" id="userDropdownBtn" class="nav-link d-flex align-items-center" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              <img id="navbarProfilePic" src="../pictureDefault/perfilLogoDefecto.jpg" alt="Perfil"
+                class="rounded-circle">
+            </a>
+            <ul class="dropdown-menu dropdown-menu-end shadow" aria-labelledby="userDropdownBtn">
+              <li>
+                <h6 class="dropdown-header" id="userEmail">usuario@example.com</h6>
+              </li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="../plantillas/usuario.html">Mi cuenta</a></li>
+              <li><a class="dropdown-item" href="../index.html" onclick="cerrarSesion()">Cerrar sesión</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  
   <!-- Banner -->
   <section class="banner d-flex align-items-center">
     <div class="banner-overlay"></div>
@@ -232,7 +230,7 @@
     <div class="container">
       <div class="row text-center text-md-start align-items-center">
         <div class="col-md-3 mb-4">
-          <a href="../index.htm">
+          <a href="../index.html">
             <img src="../logo/logo.png" alt="Logo Turismo Salvadoreño" class="img-fluid" style="max-width: 150px" />
           </a>
         </div>
@@ -272,5 +270,4 @@
   <script src="../js/navbarUsuario.js"></script>
   <script src="../js/usuario.js"></script>
 </body>
-
 </html>
