--- a/proyecto_web/plantillas/promociones.html
+++ b/proyecto_web/plantillas/promociones.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,103 +7,100 @@
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
-  <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet"/>
   <link href="../css/style.css" rel="stylesheet" />
   <link href="../css/stylePromo.css" rel="stylesheet" />
 </head>
 
 <body>
-
-<!-- Header -->
-<header>
-  <div class="container-fluid bg-light py-2 border-bottom">
-    <div class="container">
-      <div class="row align-items-center text-center text-md-start">
-        <!-- Logo -->
-        <div class="col-12 col-md-4 mb-2 mb-md-0 d-flex justify-content-center justify-content-md-start">
-          <a href="./index.htm">
-            <img src="/logo/logo.png" alt="Logo Turismo Salvadoreño" class="img-fluid" style="max-height: 60px;">
-          </a>
-        </div>
-
-        <!-- Título -->
-        <div class="col-12 col-md-4 d-flex align-items-center justify-content-center">
-          <i class="bx bx-globe fs-2 text-primary me-2"></i>
-          <h1 class="m-0 fs-4 fw-bold">
-           <a href="./index.htm" class="text-decoration-none">Turismo SV</a>
-          </h1>
-        </div>
-        <div class="col-12 col-md-4 d-none d-md-block">
+  
+  <!-- Header -->
+  <header>
+    <div class="container-fluid bg-light py-2 border-bottom">
+      <div class="container">
+        <div class="row align-items-center text-center text-md-start">
+          <!-- Logo -->
+          <div class="col-12 col-md-4 mb-2 mb-md-0 d-flex justify-content-center justify-content-md-start">
+            <a href="../index.html">
+              <img src="../logo/logo.png" alt="Logo Turismo Salvadoreño" class="img-fluid" style="max-height: 60px;">
+            </a>
+          </div>
+  
+          <!-- Título -->
+          <div class="col-12 col-md-4 d-flex align-items-center justify-content-center">
+            <i class="bx bx-globe fs-2 text-primary me-2"></i>
+            <h1 class="m-0 fs-4 fw-bold">
+              <a href="../index.html" class="text-decoration-none">Turismo SV</a>
+            </h1>
+          </div>
+          <div class="col-12 col-md-4 d-none d-md-block">
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</header>
-
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-custom shadow-sm">
-      <div class="container">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse menu" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item text-center text-lg-start">
-              <a class="nav-link px-3" href="../index.htm">Inicio</a>
-            </li>
-            <li class="nav-item dropdown">
-              <select class="select-menu nav-link" onchange="location = this.value;">
-                <option value="" class="turismo">TURISMO</option>
-                <option value="../plantillas/urbano.html"></a>Urbano</option>
-                <option value="../plantillas/rural.html">Rural</option>
-                <option value="../plantillas/playas.html">Playas</option>
-                <option value="../plantillas/lagos.html">Lagos</option>
-                <option value="../plantillas/montanas.html">Montañas</option>
-              </select>
-            </li>
-            <li class="nav-item text-center text-lg-start">
-              <a class="nav-link px-3" href="../plantillas/resenas.html">Reseñas</a>
-            </li>
-            <li class="nav-item text-center text-lg-start">
-              <a class="nav-link px-3" href="../plantillas/reservas.html">Reservas</a>
-            </li>
-            <li class="nav-item text-center text-lg-start">
-              <a class="nav-link px-3" href="../plantillas/contacto.html">Contacto</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link px-3 buttonfix-link" href="../plantillas/quienesSomos.html">¿Quiénes Somos?</a>
-            </li>
-            <li class="nav-item text-center text-lg-start">
-              <a class="nav-link index px-3" href="../plantillas/promociones.html">Promociones</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link px-3 buttonfix-link" href="../plantillas/login.html">Iniciar Sesion</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a href="#" id="userDropdownBtn" class="nav-link d-flex align-items-center" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                <img id="navbarProfilePic" src="../pictureDefault/perfilLogoDefecto.jpg" alt="Perfil"
-                  class="rounded-circle">
-              </a>
-              <ul class="dropdown-menu dropdown-menu-end shadow" aria-labelledby="userDropdownBtn">
-                <li>
-                  <h6 class="dropdown-header" id="userEmail">usuario@example.com</h6>
-                </li>
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="../plantillas/usuario.html">Mi cuenta</a></li>
-                <li><a class="dropdown-item" href="../index.htm" onclick="cerrarSesion()">Cerrar sesión</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div>
+  </header>
+  
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-custom shadow-sm">
+    <div class="container">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+  
+      <div class="collapse navbar-collapse menu" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item text-center text-lg-start">
+            <a class="nav-link px-3" href="../index.html">Inicio</a>
+          </li>
+          <li class="nav-item dropdown">
+            <select class="select-menu nav-link" onchange="location = this.value;">
+              <option value="" class="turismo">TURISMO</option>
+              <option value="../plantillas/urbano.html"></a>Urbano</option>
+              <option value="../plantillas/rural.html">Rural</option>
+              <option value="../plantillas/playas.html">Playas</option>
+              <option value="../plantillas/lagos.html">Lagos</option>
+              <option value="../plantillas/montanas.html">Montañas</option>
+            </select>
+          </li>
+          <li class="nav-item text-center text-lg-start">
+            <a class="nav-link px-3" href="../plantillas/resenas.html">Reseñas</a>
+          </li>
+          <li class="nav-item text-center text-lg-start">
+            <a class="nav-link px-3" href="../plantillas/reservas.html">Reservas</a>
+          </li>
+          <li class="nav-item text-center text-lg-start">
+            <a class="nav-link px-3" href="../plantillas/contacto.html">Contacto</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link px-3 buttonfix-link" href="../plantillas/quienesSomos.html">¿Quiénes Somos?</a>
+          </li>
+          <li class="nav-item text-center text-lg-start">
+            <a class="nav-link index px-3" href="../plantillas/promociones.html">Promociones</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link px-3 buttonfix-link" href="../plantillas/login.html">Iniciar Sesion</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a href="#" id="userDropdownBtn" class="nav-link d-flex align-items-center" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              <img id="navbarProfilePic" src="../pictureDefault/perfilLogoDefecto.jpg" alt="Perfil"
+                class="rounded-circle">
+            </a>
+            <ul class="dropdown-menu dropdown-menu-end shadow" aria-labelledby="userDropdownBtn">
+              <li>
+                <h6 class="dropdown-header" id="userEmail">usuario@example.com</h6>
+              </li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="../plantillas/usuario.html">Mi cuenta</a></li>
+              <li><a class="dropdown-item" href="../index.html" onclick="cerrarSesion()">Cerrar sesión</a></li>
+            </ul>
+          </li>
+        </ul>
       </div>
-    </nav>
-
-
+    </div>
+  </nav>
+  
   <!-- Banner -->
   <section class="banner d-flex align-items-center">
     <div class="banner-overlay"></div>
@@ -116,15 +112,11 @@
     </div>
   </section>
 
-  <!-- Promocuones -->
-
+  <!-- Promociones -->
   <h1>Promociones Turísticas El Salvador</h1>
-
-
   <main>
     <div class="contenedor-promocion">
       <img src="../images/promoTunco.jpg" alt="Playa El Tunco" class="imagen-promocion">
-
       <div class="promocion">
         <h2>🌊 Playa El Tunco – Paquete “Sol y Arena”</h2>
         <p><strong>Desde $99 por persona</strong></p>
@@ -134,14 +126,11 @@
           <li>Clase de surf</li>
           <li>Show en vivo</li>
         </ul>
-        <a href="#" class="btn btn-primary reservar-btn" data-paquete="solArena" data-adultos="1"
-          data-ninos="0">Reservar ahora</a>
-
+        <a href="#" class="btn btn-primary reservar-btn" data-paquete="solArena" data-adultos="1" data-ninos="0">Reservar ahora</a>
         <a class="btn btn-success" onclick="mostrarVideo('../videos/videoTunco.mp4')">Más información</a>
       </div>
-
     </div>
-
+  
     <!-- Modal de Video Informativo -->
     <div class="modal fade" id="modalVideo" tabindex="-1" aria-labelledby="etiquetaModalVideo" aria-hidden="true">
       <div class="modal-dialog modal-lg modal-dialog-centered">
@@ -161,61 +150,7 @@
         </div>
       </div>
     </div>
-    <!-- Script de redirección y modal combinado correctamente -->
-    <script>
-      document.addEventListener('DOMContentLoaded', () => {
-        const reservaModalEl = document.getElementById('reservaModal');
-        const reservaModal = new bootstrap.Modal(reservaModalEl);
-        const modalTitle = reservaModalEl.querySelector('.modal-title');
-        const modalBody = reservaModalEl.querySelector('.modal-body');
-        const modalFooter = reservaModalEl.querySelector('.modal-footer');
-
-        document.querySelectorAll('.reservar-btn').forEach(btn => {
-          btn.addEventListener('click', (e) => {
-            e.preventDefault();
-            const card = btn.closest('.promocion');
-            const titulo = card.querySelector('h2')?.textContent?.trim();
-            const precio = card.querySelector('p strong')?.textContent?.trim();
-            const detalles = card.querySelector('ul')?.innerText?.trim();
-
-            modalTitle.textContent = 'Reserva de paquete';
-            modalBody.innerHTML = `
-        <div class="alert alert-info">
-          <p><i class="bx bx-package me-2"></i> <strong>Paquete:</strong> ${titulo}</p>
-          ${precio ? `<p><i class="bx bx-dollar me-2"></i> ${precio}</p>` : ''}
-          ${detalles ? `<p><i class="bx bx-detail me-2"></i> ${detalles.replace(/\n/g, '<br>')}</p>` : ''}
-          <hr><p class="mb-0">Haz clic en continuar para ir al formulario de reserva.</p>
-        </div>`;
-
-            const paquete = btn.dataset.paquete;
-            const adultos = btn.dataset.adultos || 1;
-            const ninos = btn.dataset.ninos || 0;
-
-            modalFooter.innerHTML = `
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-        <a href="reservas.html?paquete=${encodeURIComponent(paquete)}&adultos=${adultos}&ninos=${ninos}" class="btn btn-primary">Ir al formulario</a>
-      `;
-
-            reservaModal.show();
-          });
-        });
-      });
-    </script>
-
-    <!-- Script para reproducir el video en el modal -->
-    <script>
-      function mostrarVideo(ruta) {
-        const video = document.getElementById("videoPromocional");
-        const fuente = document.getElementById("fuenteVideo");
-
-        fuente.src = ruta;
-        video.load();
-
-        const modal = new bootstrap.Modal(document.getElementById("modalVideo"));
-        modal.show();
-      }
-    </script>
-
+  
     <div class="contenedor-promocion">
       <section class="promocion">
         <h2>🌅 Lago de Coatepeque – Paquete “Atardecer en el Lago”</h2>
@@ -226,17 +161,14 @@
           <li>Cabaña con jacuzzi</li>
           <li>Desayuno incluido</li>
         </ul>
-        <a href="#" class="btn btn-primary reservar-btn" data-paquete="atardecer" data-adultos="2"
-          data-ninos="0">Reservar ahora</a>
+        <a href="#" class="btn btn-primary reservar-btn" data-paquete="atardecer" data-adultos="2" data-ninos="0">Reservar ahora</a>
         <a class="btn btn-success" onclick="mostrarVideo('../videos/videoLago.mp4')">Más información</a>
-
       </section>
       <img src="../images/promoLago.jpg" alt="Playa El Tunco" class="imagen-promocion">
     </div>
-
+  
     <div class="contenedor-promocion">
       <img src="../images/promoCerro.jpg" alt="Playa El Tunco" class="imagen-promocion">
-
       <section class="promocion">
         <h2>🌿 Cerro Verde – Paquete “Exploradores del Bosque”</h2>
         <p><strong>$89 por persona</strong></p>
@@ -245,13 +177,11 @@
           <li>Picnic en la cima</li>
           <li>Zipline y actividades infantiles</li>
         </ul>
-        <a href="#" class="btn btn-primary reservar-btn" data-paquete="bosque" data-adultos="1" data-ninos="0">Reservar
-          ahora</a>
+        <a href="#" class="btn btn-primary reservar-btn" data-paquete="bosque" data-adultos="1" data-ninos="0">Reservar ahora</a>
         <a class="btn btn-success" onclick="mostrarVideo('../videos/videoCerro.mp4')">Más información</a>
-
       </section>
     </div>
-
+  
     <div class="contenedor-promocion">
       <section class="promocion">
         <h2>🌆 San Salvador – Paquete “Escapada Urbana”</h2>
@@ -265,12 +195,32 @@
         <a href="#" class="btn btn-primary reservar-btn" data-paquete="urbano" data-adultos="2" data-ninos="0">Reservar
           ahora</a>
         <a class="btn btn-success" onclick="mostrarVideo('../videos/videoUrbano.mp4')">Más información</a>
-
+  
       </section>
       <img src="../images/promoUrbano.jpg" alt="Playa El Tunco" class="imagen-promocion">
     </div>
-
+  
   </main>
+
+   <!-- Modal de Reserva Dinámica -->
+  <div class="modal fade" id="reservaModal" tabindex="-1" aria-labelledby="reservaModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="reservaModalLabel">Reserva</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+        </div>
+        <div class="modal-body" id="reservaModalBody">
+          <!-- Contenido dinámico se insertará aquí -->
+        </div>
+        <div class="modal-footer">
+          <a href="reservas.html" class="btn btn-primary">Ir al formulario de reserva</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
   <!-- Footer -->
   <footer class="bg-dark text-white pt-5 pb-4 shadow-lg">
     <div class="container">
@@ -322,29 +272,13 @@
       </div>
     </div>
   </footer>
-  <!-- Modal de Reserva Dinámica -->
-  <div class="modal fade" id="reservaModal" tabindex="-1" aria-labelledby="reservaModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-lg">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="reservaModalLabel">Reserva</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
-        </div>
-        <div class="modal-body" id="reservaModalBody">
-          <!-- Contenido dinámico se insertará aquí -->
-        </div>
-        <div class="modal-footer">
-          <a href="reservas.html" class="btn btn-primary">Ir al formulario de reserva</a>
-        </div>
-      </div>
-    </div>
-  </div>
-
+  
+  
   <script src="../js/script.js"></script>
   <script src="../js/navbarUsuario.js"></script>
+  <script src="../js/promociones.js"></script>
   <script src="../js/usuario.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
-
 </html>
