Arreglos y detalles pequeños

--- a/proyecto_web/plantillas/resenas.html
+++ b/proyecto_web/plantillas/resenas.html
@@ -113,58 +113,55 @@
     </div>
   </section>
   
-  <!--Comentraios Recientes-->
-  
-  <br><br>
-  <div class="container">
-    <h2 class="fw-bold mb-3">Opiniones recientes</h2>
-    <br>
-    <div class="row">
-      <div class="col-md-3 mb-4">
-        <div class="card">
-          <img src="../images/perfil1.png" class="card-img-top rounded-circle" alt="David Hernández">
-          <div class="card-body">
-            <h5 class="card-title">David Hernández</h5>
-            <p class="card-text">Paquetes con precios justos para los lugares que ofrecen, ademas si posees una familia
-              numerosa beneficia ya que los costos no son elevados. </p>
-          </div>
-        </div>
-      </div>
-  
-      <div class="col-md-3 mb-4">
-        <div class="card">
-          <img src="../images/perfil2.png" class="card-img-top rounded-circle" alt="Esteban Leonardo Meneses">
-          <div class="card-body">
-            <h5 class="card-title">Esteban Leonardo Meneses</h5>
-            <p class="card-text">Buen ambiente en mi caso mis amigos no puedieron acompañarme pero en ningun momento me
-              llegue
-              a sentir excluido, y los lugares visitados son muy hermosos</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 mb-4">
-        <div class="card">
-          <img src="../images/perfil3.png" class="card-img-top rounded-circle" alt="Carlos Castillo Sevillano">
-          <div class="card-body">
-            <h5 class="card-title">Carlos Castillo Sevillano</h5>
-            <p class="card-text">Buen trato, movilidad muy comoda dado a los lugares visitados.</p>
-          </div>
-        </div>
-      </div>
-  
-      <div class="col-md-3 mb-4">
-        <div class="card">
-          <img src="../images/perfil4.png" class="card-img-top rounded-circle" alt="Noelia Cuadrado Roman">
-          <div class="card-body">
-            <h5 class="card-title">Noelia Cuadrado Roman</h5>
-            <p class="card-text">Mi experiencia fue increíble. Buen trato de parte de todos los colaboradores de Turismo
-              SV
-            </p>
-          </div>
+  <!-- Comentarios Recientes -->
+<!-- Comentarios Recientes -->
+<div class="container py-5">
+  <h2 class="fw-bold mb-5 text-center">Opiniones recientes</h2>
+  <div class="row g-4 justify-content-center">
+    
+    <div class="col-md-6 col-lg-3">
+      <div class="card h-100 text-center p-3">
+        <img src="../images/perfil1.png" class="rounded-circle mx-auto d-block" alt="David Hernández" style="width: 100px; height: 100px;">
+        <div class="card-body">
+          <h5 class="card-title text-center mb-2">David Hernández</h5>
+          <p class="card-text text-justify">Paquetes con precios justos para los lugares que ofrecen, además si posees una familia numerosa, se beneficia ya que los costos no son elevados.</p>
         </div>
       </div>
     </div>
+
+    <div class="col-md-6 col-lg-3">
+      <div class="card h-100 text-center p-3">
+        <img src="../images/perfil2.png" class="rounded-circle mx-auto d-block" alt="Esteban Leonardo Meneses" style="width: 100px; height: 100px;">
+        <div class="card-body">
+          <h5 class="card-title text-center mb-2">Esteban Leonardo Meneses</h5>
+          <p class="card-text text-justify">Buen ambiente. Mis amigos no pudieron acompañarme, pero en ningún momento me sentí excluido. Los lugares visitados son hermosos.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-6 col-lg-3">
+      <div class="card h-100 text-center p-3">
+        <img src="../images/perfil3.png" class="rounded-circle mx-auto d-block" alt="Carlos Castillo Sevillano" style="width: 100px; height: 100px;">
+        <div class="card-body">
+          <h5 class="card-title mb-2 text-center">Carlos Castillo Sevillano</h5>
+          <p class="card-text text-justify">Buen trato. Movilidad muy cómoda para los lugares que se visitaron.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-6 col-lg-3">
+      <div class="card h-100 text-center p-3">
+        <img src="../images/perfil4.png" class="rounded-circle mx-auto d-block" alt="Noelia Cuadrado Roman" style="width: 100px; height: 100px;">
+        <div class="card-body">
+          <h5 class="card-title text-center mb-2">Noelia Cuadrado Roman</h5>
+          <p class="card-text text-justify">Mi experiencia fue increíble. Buen trato por parte de todos los colaboradores de Turismo SV.</p>
+        </div>
+      </div>
+    </div>
+
   </div>
+</div>
+
   
   <!--Estructura del carrusel-->
   <div class="row mb-5">
@@ -233,10 +230,10 @@
         <!-- Logo -->
         <div class="col-md-3 mb-4">
           <a href="../index.html">
-            <img src="../logo/logo.png" alt="Logo Turismo Salvadoreño" class="img-fluid" style="max-width: 150px" />
+            <img src="../logo/logo.png" alt="Logo Turismo Salvadoreño" class="img-fluid" style="max-width: 150px;">
           </a>
         </div>
-  
+
         <!-- Sobre Nosotros -->
         <div class="col-md-4 mb-4">
           <h5 class="fw-bold text-uppercase">Sobre Nosotros</h5>
@@ -244,20 +241,20 @@
             reserva de excursiones
             turísticas hacia los destinos más fascinantes de nuestro país. </p>
           <p class="text-white-50" style="text-align: justify;">Ofrecemos experiencias únicas en zonas urbanas, rurales,
-            lagos, playas y montañas, conectando a los viajeros con la riqueza natural, cultural y humana de El Salvador.
-          </p>
+            lagos, playas y montañas, conectando a los viajeros con la riqueza natural, cultural y humana de El
+            Salvador.</p>
         </div>
-  
+
         <!-- Redes Sociales -->
         <div class="col-md-5 mb-4">
           <h5 class="fw-bold text-uppercase">Síguenos</h5>
           <div class="d-flex justify-content-center justify-content-md-start gap-3 mt-2 fs-4">
-            <a href="#" class="text-white hover-icon"><i class="bx bxl-facebook"></i></a>
-            <a href="#" class="text-white hover-icon"><i class="bx bxl-instagram"></i></a>
-            <a href="#" class="text-white hover-icon"><i class="bx bxl-twitter"></i></a>
-            <a href="#" class="text-white hover-icon"><i class="bx bxl-youtube"></i></a>
-            <a href="#" class="text-white hover-icon"><i class="bx bxs-envelope"></i></a>
-            <a href="#" class="text-white hover-icon"><i class="bx bxl-whatsapp"></i></a>
+            <a href="#" class="text-white hover-icon"><i class='bx bxl-facebook'></i></a>
+            <a href="#" class="text-white hover-icon"><i class='bx bxl-instagram'></i></a>
+            <a href="#" class="text-white hover-icon"><i class='bx bxl-twitter'></i></a>
+            <a href="#" class="text-white hover-icon"><i class='bx bxl-youtube'></i></a>
+            <a href="#" class="text-white hover-icon"><i class='bx bxs-envelope'></i></a>
+            <a href="#" class="text-white hover-icon"><i class='bx bxl-whatsapp'></i></a>
           </div>
           <div class="d-flex justify-content-center justify-content-md-start align-items-center mt-3">
             <i class="bx bx-phone-call fs-4 text-success me-2 text-white"></i>
@@ -268,12 +265,11 @@
           </div>
         </div>
       </div>
-  
-      <hr class="border-secondary" />
+
+      <hr class="border-secondary">
       <!-- Derechos -->
       <div class="text-center small text-muted">
-        &copy; 2025 <strong>Turismo Salvadoreño</strong> - Todos los Derechos
-        Reservados.
+        &copy; 2025 <strong>Turismo Salvadoreño</strong> - Todos los Derechos Reservados.
       </div>
     </div>
   </footer>
