--- a/proyecto_web/plantillas/quienesSomos.html
+++ b/proyecto_web/plantillas/quienesSomos.html
@@ -14,31 +14,35 @@
 </head>
 <body>
   
-  <!-- Header -->
-  <header>
-    <div class="container-fluid bg-light py-2 border-bottom">
-      <div class="container">
-        <div class="row align-items-center text-center text-md-start">
-          <!-- Logo -->
-          <div class="col-12 col-md-4 mb-2 mb-md-0 d-flex justify-content-center justify-content-md-start">
-            <a href="../index.html">
-              <img src="../logo/logo.png" alt="Logo Turismo Salvadoreño" class="img-fluid" style="max-height: 60px;">
-            </a>
-          </div>
-  
-          <!-- Título -->
-          <div class="col-12 col-md-4 d-flex align-items-center justify-content-center">
-            <i class="bx bx-globe fs-2 text-primary me-2"></i>
-            <h1 class="m-0 fs-4 fw-bold">
-              <a href="../index.html" class="text-decoration-none">Turismo SV</a>
-            </h1>
-          </div>
-          <div class="col-12 col-md-4 d-none d-md-block">
-          </div>
+<!-- Header principal con fondo claro y borde inferior -->
+<header>
+  <div class="container-fluid bg-light py-2 border-bottom"> <!-- Contenedor ancho con padding vertical y borde -->
+    <div class="container"> <!-- Contenedor centrado fijo -->
+      <div class="row align-items-center text-center text-md-start"> <!-- Fila con alineación vertical y texto centrado en móvil, a la izquierda en escritorio -->
+
+        <!-- Logo, centrado en móvil y alineado a la izquierda en escritorio -->
+        <div class="col-12 col-md-4 mb-2 mb-md-0 d-flex justify-content-center justify-content-md-start">
+          <a href="../index.html">
+            <img src="../logo/logo.png" alt="Logo Turismo Salvadoreño" class="img-fluid" style="max-height: 60px;">
+          </a>
         </div>
+
+        <!-- Título con icono, centrado -->
+        <div class="col-12 col-md-4 d-flex align-items-center justify-content-center">
+          <i class="bx bx-globe fs-2 text-primary me-2"></i>
+          <h1 class="m-0 fs-4 fw-bold">
+            <a href="../index.html" class="text-decoration-none">Turismo SV</a>
+          </h1>
+        </div>
+
+        <!-- Espacio vacío para mantener estructura en escritorio -->
+        <div class="col-12 col-md-4 d-none d-md-block"></div>
+
       </div>
     </div>
-  </header>
+  </div>
+</header>
+
   
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-custom shadow-sm">
@@ -104,8 +108,9 @@
   </nav>
   
   <!-- Banner -->
+   <!-- Sección Banner con texto centrado sobre imagen de fondo -->
   <section class="banner d-flex align-items-center">
-    <div class="banner-overlay"></div>
+    <div class="banner-overlay"></div> <!-- Capa semi-transparente sobre la imagen -->
     <div class="container text-white text-center banner-content">
       <p class="fs-4 mb-1">Explora El Salvador</p>
       <h2 class="display-4 fw-bold mb-4">
@@ -114,7 +119,7 @@
     </div>
   </section>
   
-  <!-- Quienes Somos -->
+  <!-- Sección Quiénes Somos con información de la empresa -->
   <div class="seccion-empresa">
     <h2 class="titulo-empresa">¿Quiénes Somos?</h2>
     <p class="descripcion-empresa">
@@ -133,7 +138,8 @@
       diseñamos cada excursión para que vivas una experiencia segura,
       auténtica e inolvidable.
     </p>
-  
+
+    <!-- Bloques con Misión, Visión y Valores -->
     <div class="bloques-empresa">
       <div class="bloque">
         <h3>Misión</h3>
@@ -165,6 +171,8 @@
       </div>
     </div>
     <br /><br />
+    <!-- Historia de la empresa -->
+
     <h2 class="titulo-empresa">Nuestra Historia</h2>
     <p class="descripcion-empresa">
       Nacimos con un sueño: hacer que más personas, tanto salvadoreños como
@@ -173,10 +181,12 @@
       organizada de reservar excursiones, y decidimos crear una plataforma que
       conecte fácilmente a los aventureros con experiencias inolvidables.
     </p>
-  
+
+    <!-- Presentación del equipo de trabajo -->
     <h2 class="titulo-empresa">Nuestro Equipo</h2>
   
     <section class="equipo">
+      <!-- Tarjetas con fotos, nombres, cargos y redes sociales de los desarrolladores -->
       <div class="card a">
         <img src="../images/persona1.png" alt="Foto de Carlos" />
         <h3>Carlos Alfaro</h3>
