--- a/proyecto_web/plantillas/promociones.html
+++ b/proyecto_web/plantillas/promociones.html
@@ -284,7 +284,7 @@
       <div class="row text-center text-md-start align-items-center">
         <!-- Logo -->
         <div class="col-md-3 mb-4">
-          <a href="../index.htm">
+          <a href="../index.html">
             <img src="../logo/logo.png" alt="Logo Turismo Salvadoreño" class="img-fluid" style="max-width: 150px" />
           </a>
         </div>
