--- a/proyecto_web/plantillas/contacto.html
+++ b/proyecto_web/plantillas/contacto.html
@@ -158,7 +158,7 @@
             <form>
               <div class="mb-3">
                 <label for="nombre" class="form-label fw-semibold">Nombre</label>
-                <input type="text" class="form-control" id="nombre" placeholder="Tu nombre completo" required autofocus />
+                <input type="text" class="form-control" id="nombre" placeholder="Tu nombre completo" required/>
               </div>
               <div class="mb-3">
                 <label for="correo" class="form-label fw-semibold">Correo Electrónico</label>
