--- a/proyecto_web/plantillas/resenas.html
+++ b/proyecto_web/plantillas/resenas.html
@@ -213,7 +213,7 @@
     <form id="commentForm">
       <div class="mb-3">
         <label for="name" class="form-label">Nombre:</label>
-        <input type="text" class="form-control" id="name" placeholder="Tu nombre" required autofocus>
+        <input type="text" class="form-control" id="name" placeholder="Tu nombre" required>
       </div>
       <div class="mb-3">
         <label for="comment" class="form-label">Comentario:</label>
